2004-09-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/sdccman.lyx: fixed a problem with my new index entries (thanks
	Frieder) and clarified the default code optimization mode

2004-09-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.lex (doPragma, process_pragma),
	* src/SDCCglobl.h (struct optimize): added pragmas "opt_code_speed",
	"opt_code_size", and "opt_code_balanced"
	* src/SDCCmain.c (optionsTable[], printOptions, scanOptionsTable):
	regrouped options by category, added support for category headers
	* src/SDCCmain.c (parseCmdLine): added options "--opt-code-speed"
	and "--opt-code-size"
	* doc/sdccman.lyx: documented these new options and pragmas
	* src/hc08/gen.c (AccLsh, AccRsh): take speed/size optimization
	preference into account

2004-09-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (geniCodePostInc, geniCodePreInc, geniCodePostDec,
	  geniCodePreDec): Fixed bug 904237 by generating a warning
	* src/SDCCerr.h,
	* src/SDCCerr.c: added warning W_SIZEOF_VOID

2004-09-09 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/device.c : When no max ram set validate full memory range.
	* src/pic/pcode.c,
	* src/pic/pcodepeep.c : Copy C code comments to optimised replacement code.

2004-09-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_gptrget.c,
	* device/lib/_gptrput.c: updated comment
	* device/lib/calloc.c,
	* device/lib/free.c,
	* device/lib/malloc.c,
	* device/lib/realloc.c: added LGPL, made them reentrant-safe
	* src/SDCCcse.c (cseBBlock),
	* src/SDCCicode.c (printOperand, geniCodeArray),
	* src/SDCCicode.h (struct operand): fixed bug 868103
	* support/regression/tests/bug-868103.c: added
	* src/SDCCast.c (searchLitOp),
	* src/SDCCcse.h (struct cseDef),
	* src/SDCCglue.c (printIvalArray, spacesToUnderscores),
	* src/SDCCicode.h (struct operand),
	* src/SDCCsymt.h (struct sym_link),
	* src/avr/gen.c (hasInc),
	* src/ds390/gen.c (hasInc),